# gen_passphrase

./: Cargo.toml  license-apache  license-mit  readme.md
examples/: create_dictionary_from_file.rs  custom.rs  mix.rs  single.rs
src/: dictionary.rs  lib.rs
src/dictionary/: eff_large.rs  eff_short_1.rs  eff_short_2.rs
